# ondevice-ai-civil-complaint

./: .coderabbit.yaml  .dockerignore  .env.airgap.example  .env.example  .env.hfspace.example  .env.local.example  .env.prod.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.hfspace  Makefile  README.md  SECURITY.md  cell2.txt  docker-compose.ci.yml  docker-compose.offline.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: aioss_task.yml  bug_report.yml  docs_chore.yml  feature_task.yml
.github/scripts/: run_inference_ci.sh
.github/workflows/: benchmark.yml  build-sea.yml  ci.yml  compose-smoke.yml  dependabot-auto-merge.yml  deploy-cloud-run.yml  deploy-hfspace.yml  deploy-pages.yml  docker-publish.yml  dora-metrics.yml  e2e-hfspace.yml  homebrew-update.yml  issue-auto-respond.yml  lean-experiment.yml  model-eval.yml  monitor-cloud-run.yml  offline-package.yml  pr-labeler.yml  publish-npm.yml  publish-package.yml  publish-pypi.yml  release.yml  reusable-docs-build.yml  reusable-lint.yml  reusable-security-scan.yml  reusable-test.yml  security.yml  selective-deploy.yml  sla-tracker.yml  train_exaone_gpu.yml  weekly-summary.yml
agents/: domain_adapter.md  draft_response.md  generator_civil_response.md
benchmarks/: bench_graph_latency.py
config/: adapters.yaml  govon.yaml
data/processed/: civil_complaint_619_qonly.jsonl  civil_complaint_quality_report.json  civil_complaint_test_with_thought.jsonl  civil_complaint_val_with_thought.jsonl  v2_quality_report.json  v2_test.jsonl  v2_val.jsonl
deploy/: README.md
deploy/compose/: docker-compose.ci.yml  docker-compose.offline.yml  docker-compose.prod.yml  docker-compose.yml
deploy/docker/: Dockerfile  Dockerfile.ci  Dockerfile.hfspace
deploy/env/: .env.airgap.example  .env.example  .env.hfspace.example  .env.local.example  .env.prod.example
deploy/hfspace/: README.md
docs/: prd-agent.md  prd.md  prd_policy_migration.md  retrospective.md  wbs.md
docs/adr/: ADR-005-harness-migration.md  README.md  TEMPLATE.md
docs/architecture/: ADR-006-agentic-architecture.md  ADR-006-agentic-side-panel-architecture.md  ADR-007-administrative-model-v3-strategy.md  GovOn-shell-mvp-architecture.md  WORKFLOW-orchestrator-tool-calling.md  harness-migration-mmp.md  langgraph-design-415.md  runtime-tuning-guide.md
docs/delivery/: CHECKLIST.md  README.md
docs/demo/: README.md
docs/guide/: ops-guide.md  user-guide.md
docs/presentation/: GovOn_발표자료.md  visualization_prompt.md
docs/research/: README.md
e2e/: api-health.spec.ts  playwright.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
homebrew/: README.md  govon.rb
metrics/: README.md
metrics/dora/: dora-20260317.json  dora-20260318.json  dora-20260319.json  dora-20260320.json  dora-20260321.json  dora-20260322.json  dora-20260406.json  dora-20260407.json  dora-20260408.json  dora-20260409.json  dora-20260410.json  dora-20260411.json  dora-20260412.json  dora-20260413.json  dora-20260414.json  dora-20260415.json  dora-20260416.json  dora-20260417.json  dora-20260418.json  dora-20260419.json  dora-20260420.json  dora-20260421.json  dora-20260422.json  dora-20260423.json  dora-20260424.json  dora-20260425.json  dora-20260426.json  dora-20260427.json  dora-20260428.json  dora-20260429.json  dora-20260430.json  dora-20260501.json  dora-20260502.json  dora-20260503.json  dora-20260504.json  dora-20260505.json  dora-20260506.json  dora-20260507.json  dora-20260508.json  dora-20260509.json  (+11 more)
metrics/grafana-cloud/: dora-dashboard.json
metrics/reports/: latest-dora.html  weekly-20260406.md  weekly-20260407.md  weekly-20260408.md  weekly-20260409.md  weekly-20260410.md  weekly-20260411.md  weekly-20260412.md  weekly-20260413.md  weekly-20260414.md  weekly-20260415.md  weekly-20260416.md  weekly-20260417.md  weekly-20260418.md  weekly-20260419.md  weekly-20260420.md  weekly-20260421.md  weekly-20260422.md  weekly-20260423.md  weekly-20260424.md  weekly-20260425.md  weekly-20260426.md  weekly-20260427.md  weekly-20260428.md  weekly-20260429.md  weekly-20260430.md  weekly-20260501.md  weekly-20260502.md  weekly-20260503.md  weekly-20260504.md  weekly-20260505.md  weekly-20260506.md  weekly-20260507.md  weekly-20260508.md  weekly-20260509.md  weekly-20260510.md  weekly-20260511.md  weekly-20260512.md  weekly-20260513.md  weekly-20260514.md  (+6 more)
metrics/scripts/: generate_report.py
models/: README.md
notebooks/: 05_merge_and_quantize_v2.ipynb
notebooks/M3_issue26/: 06_evaluate_awq_vllm_kpi.ipynb
notebooks/M3_issue70_data/: 01_data_reconstruction.ipynb
scripts/: analyze_v2_wandb.py  benchmark_latency.py  check_api_raw.py  collect_rag_dataset.py  crawl_rag_dataset.py  deploy-hfspace.sh  deploy.sh  entrypoint.sh  fix_rag_dataset.py  fix_rag_dataset_v2.py  generate-changelog.sh  generate_real_pdf.py  govon-bootstrap.sh  inspect_api_data.py  install.sh  offline-deploy.sh  test_public_doc_final.py  verify_e2e_tool_calling.py  verify_lora_serving.py
scripts/collect_data/: collect_public_docs.py  collect_saha_data.py
scripts/e2e_gpu_test/: __init__.py  config.py  flow_tracker.py  http_client.py  logger.py  report.py  runner.py
site/: mkdocs.yml
site/static/: index.html
src/: __init__.py
src/cli/: __init__.py  approval_ui.py  banner.py  commands.py  daemon.py  http_client.py  log_config.py  renderer.py  server.py  shell.py  spinner.py  terminal.py  theme.py
src/data_collection_preprocessing/: __init__.py  calibration_dataset.py  cli.py  data_preprocessor.py  parsers.py  pipeline.py  reconstruct_data.py  reconstruct_data_v2.py
src/evaluation/: evaluate_awq_vllm.py  evaluate_exaone_m3.py  evaluate_m3_autoawq.py  evaluate_m3_final.py  evaluate_m3_stable.py  evaluate_m3_vllm.py  evaluate_m3_vllm_final.py  evaluate_model.py  evaluate_model_v3.py  evaluate_model_v3_hf.py  evaluate_model_v3_peft.py  evaluate_qwen.py  (+4 more)
tests/: test_bm25_indexer.py
(+618 files in other folders)
