[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "govon"
version = "1.6.1"
description = "GovOn Agentic Shell — CLI client for the GovOn AX national infrastructure platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "umyunsang", email = "dbstkd5865@gmail.com"}
]
keywords = [
    "ax-platform",
    "national-infrastructure",
    "government-dx",
    "agentic-ai",
    "cli",
    "korean-nlp",
    "public-sector",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

# ---------------------------------------------------------------------------
# Core dependencies -- CLI thin-client only.
# Server-side packages (torch, vllm, transformers, etc.) are NOT included;
# the CLI communicates with a remote GovOn runtime via HTTP/SSE.
# ---------------------------------------------------------------------------
dependencies = [
    "httpx>=0.27.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

tui = [
    "textual>=0.89.0",
]

# Full server-side runtime (inference engine, ML models, etc.)
server = [
    "torch>=2.8.0",
    "transformers>=4.53.0",
    "accelerate>=1.0.0",
    "datasets>=2.14.0",
    "bitsandbytes>=0.44.0",
    "optimum>=1.13.0",
    "autoawq>=0.2.8",
    "peft>=0.16.0",
    "trl>=0.15.0",
    "vllm>=0.14.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.4",
    "langgraph==1.1.6",
    "langgraph-checkpoint==4.0.1",
    "langgraph-checkpoint-sqlite==3.0.3",
    "langchain-core>=1.2.0,<2.0.0",
    "langchain-openai>=0.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

korean-nlp = [
    "konlpy>=0.6.0",
    "mecab-python3>=1.0.6",
]

database = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
]

all = [
    "govon[dev,server,korean-nlp,database]",
]

# CLI is distributed via npm / brew / native installer (not pip).
# See: npm install -g govon | brew install govon-org/tap/govon

[project.urls]
Homepage = "https://github.com/GovOn-org/GovOn"
Documentation = "https://github.com/GovOn-org/GovOn#readme"
Repository = "https://github.com/GovOn-org/GovOn.git"
Issues = "https://github.com/GovOn-org/GovOn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.tcss"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "src/inference/document_processor.py",
    "src/inference/db/database.py",
    "src/inference/db/alembic/*",
    "src/inference/agent_loop.py",
    "src/inference/response_formatter.py",
    "src/inference/vllm_stabilizer.py",
    "src/inference/query_builder.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
